src/test/ui/issues/issue-32995-2.stderr
error: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-32995-2.rs:4:28
   |
LL |     { fn f<X: ::std::marker()::Send>() {} }
   |                            ^^
   |
   = note: #[deny(parenthesized_params_in_types_and_modules)] on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42238 <https://github.com/rust-lang/rust/issues/42238>

error: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-32995-2.rs:8:35
   |
LL |     { fn f() -> impl ::std::marker()::Send { } }
   |                                   ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42238 <https://github.com/rust-lang/rust/issues/42238>

error: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-32995-2.rs:16:19
   |
LL | impl ::std::marker()::Copy for X {}
   |                   ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42238 <https://github.com/rust-lang/rust/issues/42238>

error: aborting due to 3 previous errors

